== 0.1.1

* Numeric#weeks is actually defined this time
* Default locales aren't assumed for missing constant definitions in other locales
* migrated to newgem schema
* removed README, LICENSE, duration.gemspec
* added Readme.txt, License.txt, Manifest.txt and other newgem files
* Duration::VERSION is now a module: Duration::VERSION::{MAJOR,MINOR,TINY,STRING}
* added ::christmas and ::new_years to Time::Holidays
* added some docs to duration/localizations/english.rb for translators to read
* added French and Dutch localizations (thanks to Jean-François, Jean-François, Siep Korteling)