@@ -13,6 +13,7 @@ lib/duration/localizations/english.rb
 lib/duration/localizations/korean.rb
 lib/duration/localizations/french.rb
 lib/duration/localizations/dutch.rb
+lib/duration/localizations/polish.rb
 lib/duration/numeric.rb
 lib/duration/time.rb
 lib/duration/time/holidays.rb
