@@ -9,3 +9,4 @@
 * added ::christmas and ::new_years to Time::Holidays
 * added some docs to duration/localizations/english.rb for translators to read
 * added French and Dutch localizations (thanks to Jean-François, Jean-François, Siep Korteling)
+* added Polish localization (thanks to Marcin Raczkowski)
